Update references following previous commit

--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/postbuildstamptest_vs2019_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/postbuildstamptest_vs2019_win64.vcxproj
@@ -92,16 +92,16 @@
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildStampTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildStampTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*unity*.cpp" >NUL 2>NUL
-del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.obj" >NUL 2>NUL
-del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.a" >NUL 2>NUL
-del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.lib" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.exe" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.elf" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.exp" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.ilk" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.lib" >NUL 2>NUL
-del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NMakeCleanCommandLine>
+    <NMakeCleanCommandLine>del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*unity*.cpp" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.obj" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.a" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_noblob_vs2019\postbuildstamptest\*.lib" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.exe" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.elf" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.exp" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.ilk" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.lib" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.pdb" &gt;NUL 2&gt;NUL</NMakeCleanCommandLine>
     <NMakeOutput>output\debug_fastbuild_noblob_vs2019\postbuildstamptest.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>WIN64;_CONSOLE;_DEBUG</NMakePreprocessorDefinitions>
   </PropertyGroup>
@@ -112,16 +112,16 @@ del "output\debug_fastbuild_noblob_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NM
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildStampTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildStampTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>del "build\debug_fastbuild_vs2019\postbuildstamptest\*unity*.cpp" >NUL 2>NUL
-del "build\debug_fastbuild_vs2019\postbuildstamptest\*.obj" >NUL 2>NUL
-del "build\debug_fastbuild_vs2019\postbuildstamptest\*.a" >NUL 2>NUL
-del "build\debug_fastbuild_vs2019\postbuildstamptest\*.lib" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.exe" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.elf" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.exp" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.ilk" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.lib" >NUL 2>NUL
-del "output\debug_fastbuild_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NMakeCleanCommandLine>
+    <NMakeCleanCommandLine>del "build\debug_fastbuild_vs2019\postbuildstamptest\*unity*.cpp" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_vs2019\postbuildstamptest\*.obj" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_vs2019\postbuildstamptest\*.a" &gt;NUL 2&gt;NUL
+del "build\debug_fastbuild_vs2019\postbuildstamptest\*.lib" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.exe" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.elf" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.exp" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.ilk" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.lib" &gt;NUL 2&gt;NUL
+del "output\debug_fastbuild_vs2019\postbuildstamptest.pdb" &gt;NUL 2&gt;NUL</NMakeCleanCommandLine>
     <NMakeOutput>output\debug_fastbuild_vs2019\postbuildstamptest.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>WIN64;_CONSOLE;_DEBUG</NMakePreprocessorDefinitions>
   </PropertyGroup>
@@ -144,16 +144,16 @@ del "output\debug_fastbuild_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NMakeClea
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildStampTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildStampTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*unity*.cpp" >NUL 2>NUL
-del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.obj" >NUL 2>NUL
-del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.a" >NUL 2>NUL
-del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.lib" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.exe" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.elf" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.exp" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.ilk" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.lib" >NUL 2>NUL
-del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NMakeCleanCommandLine>
+    <NMakeCleanCommandLine>del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*unity*.cpp" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.obj" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.a" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_noblob_vs2019\postbuildstamptest\*.lib" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.exe" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.elf" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.exp" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.ilk" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.lib" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.pdb" &gt;NUL 2&gt;NUL</NMakeCleanCommandLine>
     <NMakeOutput>output\release_fastbuild_noblob_vs2019\postbuildstamptest.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>NDEBUG;WIN64;_CONSOLE</NMakePreprocessorDefinitions>
   </PropertyGroup>
@@ -164,16 +164,16 @@ del "output\release_fastbuild_noblob_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildStampTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
 "$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildStampTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>del "build\release_fastbuild_vs2019\postbuildstamptest\*unity*.cpp" >NUL 2>NUL
-del "build\release_fastbuild_vs2019\postbuildstamptest\*.obj" >NUL 2>NUL
-del "build\release_fastbuild_vs2019\postbuildstamptest\*.a" >NUL 2>NUL
-del "build\release_fastbuild_vs2019\postbuildstamptest\*.lib" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.exe" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.elf" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.exp" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.ilk" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.lib" >NUL 2>NUL
-del "output\release_fastbuild_vs2019\postbuildstamptest.pdb" >NUL 2>NUL</NMakeCleanCommandLine>
+    <NMakeCleanCommandLine>del "build\release_fastbuild_vs2019\postbuildstamptest\*unity*.cpp" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_vs2019\postbuildstamptest\*.obj" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_vs2019\postbuildstamptest\*.a" &gt;NUL 2&gt;NUL
+del "build\release_fastbuild_vs2019\postbuildstamptest\*.lib" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.exe" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.elf" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.exp" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.ilk" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.lib" &gt;NUL 2&gt;NUL
+del "output\release_fastbuild_vs2019\postbuildstamptest.pdb" &gt;NUL 2&gt;NUL</NMakeCleanCommandLine>
     <NMakeOutput>output\release_fastbuild_vs2019\postbuildstamptest.exe</NMakeOutput>
     <NMakePreprocessorDefinitions>NDEBUG;WIN64;_CONSOLE</NMakePreprocessorDefinitions>
   </PropertyGroup>
