--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -217,17 +217,11 @@ jobs:
           & $env:COMPILE_BATCH projects\fastbuildsample_vs2019_win64.sln "${{ matrix.configuration }}" "x64"
           projects\output\win64\${{ matrix.configuration }}\fastbuildsimpleexecutable.exe
 
-      - name: Fixup Android SDK dx.bat and dx.jar
-        if: runner.os == 'Windows'
-        shell: bash
-        run: | # starting with Android SDK 31, DX (which was deprecated) has been replaced by D8, which seems called by the VS gradle. Since it uses the same arguments, we cheat by mklinking d8 to dx
-          ln -s ${ANDROID_HOME}/build-tools/33.0.0/d8.bat ${ANDROID_HOME}/build-tools/33.0.0/dx.bat
-          ln -s ${ANDROID_HOME}/build-tools/33.0.0/lib/d8.jar ${ANDROID_HOME}/build-tools/33.0.0/lib/dx.jar
-
       - name: HelloAndroid ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/HelloAndroid'
         run: |
+          $env:JAVA_HOME = $env:JAVA_HOME_11_X64
           & $env:SHARPMAKE_WIN_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
           & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "arm64_v8a"
           & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "x86_64"
