[AndroidAgde] Multiple fixes - Added agde specific options - Fixed gradle specific settings   Moved gradlebuilddir to another place in the project template to be able to use $(ProjectDir) - Set missing options["IncludePath"] via GetSdkIncludePaths   Reverted back to old behavior of AndroidGradleBuildDir and AndroidApplicationModule - Removed additional SdkIncludePaths in adge   They were only causing problems with std:: - Moved AndroidEnablePackaging and AndroidApplicationModule from global configuration space to per configuration space
Closes !286

--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -133,6 +133,7 @@
     <Compile Include="IWindowsFastBuildCompilerSettings.cs" />
     <Compile Include="KitsRootPaths.cs" />
     <Compile Include="MSBuildGlobalSettings.cs" />
+    <Compile Include="Options.Agde.cs" />
     <Compile Include="Options.Android.cs" />
     <Compile Include="Options.AndroidMakefile.cs" />
     <Compile Include="Options.CSharp.cs" />
