Initial AGDE FastBuild support - Upgrade gradle to 6.7.1 by following Agde example; - AndroidApkLocation dirive from PathOption; - Put all Agde specific options to class Options.Agde; - Copy Agde referenced options from Options.Vc into Options.Agde - Add specified source file instead of the folder - Restore codes existed before and mark them 'Obsolete' - Fix dependencies' extension name double appended and android system libs can't be found issue when add dependencies by conf.LibraryFiles.Add() instead of conf.AdditionalLinkerOptions.Add() - Add a note about why can't use "conf.LibraryFiles.Add("liblog.so", "libandroid.so")" - Add PositionIndependentCode option and enable it by default - Fix GetAndroidApiLevelString(AndroidAPILevel.Latest) always return empty string issue - Using clang-orbis as fastBuildLinkerType to get a correctly escaped response file when the command-line is too long - Restore Android.DebugInformationFormat using FullDebug by default - Use Gradle script instead of creating bat file for cleaning up package intermediate files - Change SimplePlatformString of AndroidAgdePlatform from 'Android' to 'Agde' - change cmdLineOptions.StaticLibStdCpp to cmdLineOptions.UseOfStl for keeping a consistent name with msbuild
Closes !281

--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Android\AndroidAgdePlatform.Bff.Template.cs" />
     <Compile Include="Android\AndroidAgdePlatform.cs" />
     <Compile Include="Android\AndroidFragments.cs" />
     <Compile Include="Android\AndroidPlatform.Vcxproj.Template.cs" />
