Sharpmake is now using .net 6.0 instead of .net 5.0
It is about 5% faster when generating projects for one of our big game engine.

Kill extension loader code that is using domain loading and unloading:
- This is not supported anymore in .net 6
- That code was only used by ExtensionLoader.LoadExtensionsInDirectory() and it wasn't used(dead code)

Can't get a culture when running under globalization invariant in .net 6

Generate a vs2022 debug solution as this is a requirement for .net 6.

Disable Windows-2019 image when compiling on github. .net6 needs VS2022.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2019, windows-2022]
-        framework: [net5.0]
+        os: [ubuntu-latest, macos-latest, windows-2022]
+        framework: [net6.0]
         configuration: [debug, release]
 
     steps:
@@ -72,7 +72,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019] # only windows for now, but ideally should be all. TODO: add windows-2022
-        framework: [net5.0]
+        framework: [net6.0]
 
     steps:
       - name: Checkout the repo
@@ -95,7 +95,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-2019] # TODO: add windows-2022
-        framework: [net5.0]
+        framework: [net6.0]
         configuration: [debug, release]
 
     env:
