--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -112,6 +112,7 @@
     <Compile Include="FileGenerator.cs" />
     <Compile Include="FileGeneratorUtilities.cs" />
     <Compile Include="GeneratorManager.cs" />
+    <Compile Include="Generic\GenericProjectOptionsGenerator.cs" />
     <Compile Include="Generic\JsonCompilationDatabase.cs" />
     <Compile Include="Generic\MakeApplication.Template.cs" />
     <Compile Include="Generic\MakeApplication.cs" />
@@ -119,6 +120,8 @@
     <Compile Include="Generic\MakeProject.cs" />
     <Compile Include="Generic\Makefile.Template.cs" />
     <Compile Include="Generic\Makefile.cs" />
+    <Compile Include="Generic\NinjaProject.cs" />
+    <Compile Include="Generic\NinjaProject.Template.cs" />
     <Compile Include="IFileGenerator.cs" />
     <Compile Include="IGenerationContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
