--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2017.v4_6_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2017.v4_6_2.vcxproj
@@ -249,12 +249,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="CSharpProjBuildOrderDependency.vs2017.v4_6_2.csproj">
+      <Project>{CABE51EB-3AED-01E0-3DDB-A72DFBA0ECE5}</Project>
+      <Name>CSharpProjBuildOrderDependency</Name>
+      <Private>true</Private>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
     <ProjectReference Include="OtherCSharpProj.vs2017.v4_6_2.csproj">
       <Project>{8E3BF86E-9B9B-F4D1-16B3-47F6070A6D5C}</Project>
       <Name>OtherCSharpProj</Name>
       <Private>true</Private>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <ProjectReference Include="theemptycppproject.vs2017.v4_6_2.vcxproj">
       <Project>{CE7B50A6-EFE2-4A32-3204-AD7714A268F7}</Project>
