--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2019.v4_7_2.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2019.v4_7_2.vcxproj
@@ -249,12 +249,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="CSharpProjBuildOrderDependency.vs2019.v4_7_2.csproj">
+      <Project>{091EF017-0E3A-BA28-97CD-714D759BD4DF}</Project>
+      <Name>CSharpProjBuildOrderDependency</Name>
+      <Private>true</Private>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
     <ProjectReference Include="OtherCSharpProj.vs2019.v4_7_2.csproj">
       <Project>{81B57E84-A2EB-53E8-8AAC-3847232697E6}</Project>
       <Name>OtherCSharpProj</Name>
       <Private>true</Private>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <ProjectReference Include="theemptycppproject.vs2019.v4_7_2.vcxproj">
       <Project>{0B7B372C-D9BE-10C9-80D0-EB5C7ABCABAE}</Project>
